--- a/index.html
+++ b/index.html
@@ -92,10 +92,14 @@
       </div>
     </div>
   
+    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@600&display=swap" rel="stylesheet">
     <div class="navbar-menu">
       
       <div class="navbar-start">
-        <span class="navbar-item is-size-4">Yousuf Hoda</span>
+        <a href="/" class="navbar-item is-size-4 has-text-weight-bold" 
+           style="font-family: 'Source Sans Pro', sans-serif; user-select: none;">
+            Yousuf Hoda
+        </a>
       </div>
     
       <div class="navbar-end">
@@ -108,28 +112,28 @@
         <div class="navbar-end">
             <a class="navbar-item" href="#Education">
                 <span class="icon is-small">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-graduation-cap"></i>
                 </span>
           Education
         </a>
         <div class="navbar-end">
             <a class="navbar-item" href="#Experience">
                 <span class="icon is-small">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-briefcase"></i>
                 </span>
           Experience
         </a>
         <div class="navbar-end">
             <a class="navbar-item" href="#Resume">
                 <span class="icon is-small">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-file-alt"></i>
                 </span>
           Resume
         </a>
         <div class="navbar-end">
             <a class="navbar-item" href="#Contact">
                 <span class="icon is-small">
-                    <i class="fas fa-user"></i>
+                    <i class="fas fa-envelope"></i>
                 </span>
           Contact
         </a>
@@ -160,11 +164,17 @@
         <h2 class="subtitle is-3">
           Welcome to my personal portfolio
         </h2>
+        <p>I'm a 5th-year BTM student at <strong>Toronto Metropolitan University</strong>, 
+          where I've honed my skills at the intersection of business and technology. 
+          Through the co-op program, I’ve applied my knowledge in real-world scenarios, solving business challenges using technology-driven solutions. 
+          I'm passionate about leveraging tech to optimize business processes and drive 
+          impactful change.
+      </p>
       </div>
-      <div class="container">
-        <!-- Use custom class for specific size -->
+      <!-- Right Column: Image -->
+      <div class="column is-half has-text-centered">
         <figure class="image custom-image is-inline-block">
-          <img src="#" alt="Photo of Yousuf Hoda">
+            <img src="#" alt="Photo of Yousuf Hoda">
         </figure>
       </div>
     </div>
@@ -192,7 +202,7 @@
             I have had the oppurtunity to apply my classroom knowledge into real-world scenarios. 
             These placements have allowed me to collaborate with industry porfessionals, sharpen my 
             problem-solving skills, and understand the impact of technology-driven solutions in business enivronments.
-
+        </p>
       </div>
     </div>
     </section>
@@ -266,7 +276,7 @@
     </section>
 
     <!-- Resume -->
-    <section class="section" id="resume">
+    <section class="section" id="Resume">
         <div class="container">
             <div class="section-heading has-addons">
                 <h3 class="title is-2 has-text-centered">Resume</h3>
@@ -298,23 +308,6 @@
                     </p>
                 </div>
             </div>
-        </div>
-    </div>
-</section>
-
-<!-- Contact Section -->
-<section class="section" id="Contact">
-    <div class="container">
-        <h3 class="title is-2 has-text-centered">Contact Me</h3>
-
-        <!-- Center the button with a text prompt -->
-        <div class="has-text-centered">
-            <a href="mailto:yousuf.hoda@torontomu.ca" class="button is-success is-medium mt-3">
-                <span class="icon">
-                    <i class="fas fa-envelope"></i>
-                </span>
-                <span>Email Me</span>
-            </a>
         </div>
     </div>
 </section>
