--- a/index.html
+++ b/index.html
@@ -114,14 +114,15 @@
   <nav class="navbar is-text is-fixed-top has-background-primary-85-invert">
     <span class="has-background-primary-soft"></span>
     <div class="navbar-brand">
-      <div class="navbar-burger burger" data-target="navbarExampleTransparentExample">
+      <!-- Burger icon for mobile-->
+      <div class="navbar-burger is-success" data-target="navbarExampleTransparentExample">
         <span></span>
         <span></span>
         <span></span>
       </div>
     </div>
 
-    <div class="navbar-menu">
+    <div class="navbar-menu" id="navbarExampleTransparentExample">
       <div class="navbar-start">
         <a href="https://yousufhoda.github.io/portfolio/" class="navbar-item is-size-4 has-text-weight-bold"
           style="font-family: 'Source Sans Pro', sans-serif;">
@@ -129,6 +130,7 @@
         </a>
       </div>
 
+      <!-- Single navbar-end block for all right-aligned items -->
       <div class="navbar-end">
         <a class="navbar-item" href="#Education">
           <span class="icon is-small">
@@ -136,43 +138,37 @@
           </span>
           Education
         </a>
-        <div class="navbar-end">
-          <a class="navbar-item" href="#Experience">
-            <span class="icon is-small">
-              <i class="fas fa-briefcase"></i>
-            </span>
-            Experience
-          </a>
-          <div class="navbar-end">
-            <a class="navbar-item" href="#Resume">
-              <span class="icon is-small">
-                <i class="fas fa-file-alt"></i>
-              </span>
-              Resume
-            </a>
-            <div class="navbar-end">
-              <a class="navbar-item" href="#Contact">
-                <span class="icon is-small">
-                  <i class="fas fa-envelope"></i>
-                </span>
-                Contact
-              </a>
-              <div class="navbar-end">
-                <a class="navbar-item" href="https://www.linkedin.com/in/yousuf-hoda-4924741ab" target="_blank">
-                  <span class="icon">
-                    <i class="fab fa-linkedin"></i>
-                  </span>
-                </a>
-                <div class="navbar-end">
-                  <a class="navbar-item" href="https://github.com/yousufhoda" target="_blank">
-                    <span class="icon">
-                      <i class="fab fa-github"></i>
-                    </span>
-                  </a>
-                </div>
-              </div>
+        <a class="navbar-item" href="#Experience">
+          <span class="icon is-small">
+            <i class="fas fa-briefcase"></i>
+          </span>
+          Experience
+        </a>
+        <a class="navbar-item" href="#Resume">
+          <span class="icon is-small">
+            <i class="fas fa-file-alt"></i>
+          </span>
+          Resume
+        </a>
+        <a class="navbar-item" href="#Contact">
+          <span class="icon is-small">
+            <i class="fas fa-envelope"></i>
+          </span>
+          Contact
+        </a>
+        <a class="navbar-item" href="https://www.linkedin.com/in/yousuf-hoda-4924741ab" target="_blank">
+          <span class="icon">
+            <i class="fab fa-linkedin"></i>
+          </span>
+        </a>
+        <a class="navbar-item" href="https://github.com/yousufhoda" target="_blank">
+          <span class="icon">
+            <i class="fab fa-github"></i>
+          </span>
+        </a>
+      </div>
+    </div>
   </nav>
-
 
   <!-- Header -->
   <section class="hero is-text is-fullheight is-fullheight-with-navbar has-background-primary-85-invert">
