--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Yousuf's Personal Portfolio!</title>
+  <meta name="description" content="Yousuf Hoda's personal portfolio showcasing education, experience, and skills.">
+  <title>Yousuf Hoda | Personal Portfolio | BTM Student</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.2/css/bulma.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
-  <title>Education Timeline</title>
   <style>
     /* Custom CSS for the timeline */
     .timeline {
@@ -28,7 +28,6 @@
 
     .timeline-item ul {
       padding-left: 1.5rem;
-      /* Indent list items to align nicely */
     }
 
     .timeline-item ul li {
@@ -191,7 +190,7 @@
       <!-- Right Column: Image -->
       <div class="column is-half has-text-centered">
         <figure class="image custom-image is-inline-block">
-          <img src="photoofme.jpg" alt="Photo of Yousuf Hoda">
+          <img src="photoofme.jpg" alt="Photo of Yousuf Hoda, BTM student at Toronto Metropolitan University">
         </figure>
       </div>
     </div>
@@ -292,7 +291,7 @@
   </section>
 
   <!-- Contact Section -->
-  <section class="section" id="Contact">
+  <section class="section mb-6" id="Contact">
     <div class="container">
       <h3 class="title is-2 has-text-centered">Contact Me</h3>
 
